--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -33,6 +33,9 @@ all:
                     netsage-portal.grnoc.iu.edu:
                     netsage-portal-sox.grnoc.iu.edu:
                     netsage-simp.grnoc.iu.edu:
+                    np-dev3.grnoc.iu.edu:
+                    np-dev3-old:
+                      ansible_host: 140.182.45.84
                     rabbitmq.tsds.bldc.grnoc.iu.edu:
                     services.tsds.bldc.grnoc.iu.edu:
                     services.tsds.ctc.grnoc.iu.edu:
@@ -200,3 +203,4 @@ all:
     xaiver:
       hosts:
         htpc.technoplaza.net:
+          ansible_connection: local
