--- a/inventory/standard/group_vars/bastion.yaml
+++ b/inventory/standard/group_vars/bastion.yaml
@@ -103,8 +103,9 @@ ssh_host_configs:
   pdu-bc10:
     User: grnoc
     HostName: 10.240.3.15
-    KexAlgorithms: diffie-hellman-group1-sha1
     Ciphers: aes256-cbc
+    HostKeyAlgorithms: ssh-dss
+    KexAlgorithms: diffie-hellman-group1-sha1
 
   # portal servers
   portal-intl:
