add alertmon host

--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -92,6 +92,8 @@ all:
                         awx.grnoc.iu.edu:
                         awx-test.bldc.grnoc.iu.edu:
                   hosts:
+                    alertmon.bldc.grnoc.iu.edu:
+                    alertmon.ctc.grnoc.iu.edu:
                     backup.grnoc.iu.edu:
                     backup.ictc.ilight.net:
                     build.grnoc.iu.edu:
