add nessus to split vpn

--- a/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
+++ b/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
@@ -36,4 +36,5 @@ vpn_hosts:
   - awx.ctc.nwave.noaa.gov
   - build.grnoc.iu.edu
   - oob2.n13.ctc.grnoc.iu.edu
+  - nessus.boul.nwave.noaa.gov
   - weblogin.nwave.noaa.gov
