--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -15,14 +15,12 @@ all:
                 internal_ndca:
                   hosts:
                     carto.bldc.grnoc.iu.edu:
-                    carto.noc.onenet.net:
                     frontend.tsds.bldc.grnoc.iu.edu:
                     frontend.tsds.ctc.grnoc.iu.edu:
                     io3.bldc.grnoc.iu.edu:
                     irnc-grm.grnoc.iu.edu:
                     jdratlif-dev7.ctc.grnoc.iu.edu:
                     mongo-arbiter.areon.net:
-                    mtu-test.bldc.grnoc.iu.edu:
                     netflow-dev-es-master-01.ctc.grnoc.iu.edu:
                     netflow-dev-es-agg-01.bldc.grnoc.iu.edu:
                     netflow-dev-es-agg-01.ctc.grnoc.iu.edu:
@@ -47,7 +45,6 @@ all:
                     snapp.fyvl.areon.net:
                     snapp.oshean.org:
                     snapp.net.cen.ct.gov:
-                    snapp.noc.onenet.net:
                     snapp-test-01.globalnoc.mcnc.org:
                     snapp-collector-01.globalnoc.mcnc.org:
                     snapp-collector-02.globalnoc.mcnc.org:
@@ -55,7 +52,6 @@ all:
                     snapp-frontend-01.globalnoc.mcnc.org:
                     snapp-frontend-02.globalnoc.mcnc.org:
                     snapp-frontend-test-01.globalnoc.mcnc.org:
-                    snapp-portal.noc.onenet.net:
                     snapp-portal-01.globalnoc.mcnc.org:
                     snapp-portal-02.globalnoc.mcnc.org:
                     snapp-portal-test-01.globalnoc.mcnc.org:
@@ -108,6 +104,18 @@ all:
                     sn-tools-dev.grnoc.iu.edu:
                     syslog.grnoc.iu.edu:
                     webdoc-01.grnoc.iu.edu:
+        # all onenet hosts need established connection sharing (ControlMaster)
+        # or the OneNet firewall will block you for connecting too many times
+        onenet_all:
+          children:
+            onenet:
+              children:
+                onenet_ndca:
+                  hosts:
+                    carto.noc.onenet.net:
+                    snapp.noc.onenet.net:
+                    snapp-portal.noc.onenet.net:
+                onenet_other:
         i2_all:
           children:
             i2_bastion:
