--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -167,8 +167,6 @@ all:
                     carto.bldc.nwave.noaa.gov:
                     carto.ctc.nwave.noaa.gov:
                     carto.boul.nwave.noaa.gov:
-                    carto-el7-test.bldc.nwave.noaa.gov:
-                    carto-el7-test.ctc.nwave.noaa.gov:
                     flow.bldc.nwave.noaa.gov:
                     flow.ctc.nwave.noaa.gov:
                     flow.boul.nwave.noaa.gov:
@@ -176,17 +174,10 @@ all:
                     flow-new.ctc.nwave.noaa.gov:
                     portal-demo.bldc.nwave.noaa.gov:
                     portal-demo.ctc.nwave.noaa.gov:
-                    sc.bldc.nwave.noaa.gov:
-                    sc.ctc.nwave.noaa.gov:
-                    sc.boul.nwave.noaa.gov:
                     simp-poller.silv.nwave.noaa.gov:
                     simp-poller.silv2.nwave.noaa.gov:
                     simp-data-silv.ctc.nwave.noaa.gov:
                     simp-comp-silv.ctc.nwave.noaa.gov:
-                    simp-test.silv.nwave.noaa.gov:
-                    snapp.bldc.nwave.noaa.gov:
-                    snapp.ctc.nwave.noaa.gov:
-                    snapp.boul.nwave.noaa.gov:
                     snapp-arbiter.boul.nwave.noaa.gov:
                     snapp-collector.bldc.nwave.noaa.gov:
                     snapp-collector.ctc.nwave.noaa.gov:
@@ -199,9 +190,6 @@ all:
                     snapp-services.ctc.nwave.noaa.gov:
                     snapp-shard.bldc.nwave.noaa.gov:
                     snapp-shard.ctc.nwave.noaa.gov:
-                    tsds.bldc.nwave.noaa.gov:
-                    tsds.ctc.nwave.noaa.gov:
-                    tsds.boul.nwave.noaa.gov:
                 nwave_other:
                   children:
                     nwave_awx:
@@ -216,8 +204,9 @@ all:
                     mysql.ctc.nwave.noaa.gov:
                     perf.dall.nwave.noaa.gov:
                     ps.ctc.nwave.noaa.gov:
-                    tools-new.bldc.nwave.noaa.gov:
-                    tools-new.ctc.nwave.noaa.gov:
+                    tools.bldc.nwave.noaa.gov:
+                    tools.ctc.nwave.noaa.gov:
+                    tools.boul.nwave.noaa.gov:
                     tools2.bldc.nwave.noaa.gov:
                     tools2.ctc.nwave.noaa.gov:
                     tools2.silv.nwave.noaa.gov:
