add compute ssh aliases

--- a/inventory/standard/group_vars/nwave_bastion.yaml
+++ b/inventory/standard/group_vars/nwave_bastion.yaml
@@ -15,6 +15,18 @@ ssh_host_common_configs:
   ControlPath: '~/.ssh/%r@%h:%p'
 
 ssh_host_configs:
+  'cloud-bldc-1 compute-bldc-1 cloud-bldc compute-bldc':
+    Hostname: compute.cloud.bldc
+  'cloud-bldc-2 compute-bldc-2':
+    Hostname: compute2.cloud.bldc
+  'cloud-bldc-3 compute-bldc-3':
+    Hostname: compute3.cloud.bldc
+  'cloud-ctc-1 compute-ctc-1 cloud-ctc compute-ctc':
+    Hostname: compute.cloud.ctc
+  'cloud-ctc-2 compute-ctc-2':
+    Hostname: compute2.cloud.ctc
+  'cloud-ctc-3 compute-ctc-3':
+    Hostname: compute3.cloud.ctc
   dns:
     Hostname: 'mysql.bldc.nwave.noaa.gov'
   puppet:
