--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -226,5 +226,5 @@ all:
                     tools2.silv.nwave.noaa.gov:
     xaiver:
       hosts:
-        htpc.technoplaza.net:
+        fedora:
           ansible_connection: local
