--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -96,6 +96,7 @@ all:
                     build.grnoc.iu.edu:
                     db-01.grnoc.iu.edu:
                     db-02.grnoc.iu.edu:
+                    jenkins.grnoc.iu.edu:
                     mon.bldc.net.cen.ct.gov:
                     mon.ehct.net.cen.ct.gov:
                     mon-01.grnoc.iu.edu:
