--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -17,6 +17,8 @@ all:
                     carto.bldc.grnoc.iu.edu:
                     frontend.tsds.bldc.grnoc.iu.edu:
                     frontend.tsds.ctc.grnoc.iu.edu:
+                    haproxy.bldc.grnoc.iu.edu:
+                    haproxy.ctc.grnoc.iu.edu:
                     io3.bldc.grnoc.iu.edu:
                     irnc-grm.grnoc.iu.edu:
                     jdratlif-dev7.ctc.grnoc.iu.edu:
