--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -135,6 +135,7 @@ all:
               children:
                 i2_ndca:
                   hosts:
+                    bgp.bldc.net.internet2.edu:
                     carto.net.internet2.edu:
                     frontend.tsds.bldc.net.internet2.edu:
                     frontend.tsds.wash2.net.internet2.edu:
