--- a/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
+++ b/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
@@ -39,6 +39,7 @@ vpn_hosts:
   - cloud.grnoc.iu.edu
   - cloud.bldc.grnoc.iu.edu
   - cloud.ctc.grnoc.iu.edu
+  - footprints.ncren.net
   - oob2.n13.ctc.grnoc.iu.edu
   - os.bldc.net.internet2.edu
   - os.wash2.net.internet2.edu
