add new n-wave COPE hosts

--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -182,6 +182,8 @@ all:
                     carto.bldc.nwave.noaa.gov:
                     carto.ctc.nwave.noaa.gov:
                     carto.boul.nwave.noaa.gov:
+                    cope.bldc.nwave.noaa.gov:
+                    cope.ctc.nwave.noaa.gov:
                     flow.bldc.nwave.noaa.gov:
                     flow.ctc.nwave.noaa.gov:
                     flow.boul.nwave.noaa.gov:
