--- a/inventory/standard/group_vars/nwave_bastion.yaml
+++ b/inventory/standard/group_vars/nwave_bastion.yaml
@@ -27,6 +27,8 @@ ssh_host_configs:
     Hostname: compute2.cloud.ctc
   'cloud-ctc-3 compute-ctc-3':
     Hostname: compute3.cloud.ctc
+  'cope.ctc.nwave.noaa.gov cope.ctc':
+    Hostname: 140.182.46.156
   dns:
     Hostname: 'mysql.bldc.nwave.noaa.gov'
   puppet:
