add db2 nwave hosts

--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -226,6 +226,9 @@ all:
                   hosts:
                     backup.boul.nwave.noaa.gov:
                     backup.ctc.nwave.noaa.gov:
+                    db2.bldc.nwave.noaa.gov:
+                    db2.boul.nwave.noaa.gov:
+                    db2.ctc.nwave.noaa.gov:
                     dist.bldc.nwave.noaa.gov:
                     kerb.bldc.nwave.noaa.gov:
                     kerb.ctc.nwave.noaa.gov:
