--- a/inventory/standard/group_vars/nwave_bastion.yaml
+++ b/inventory/standard/group_vars/nwave_bastion.yaml
@@ -27,7 +27,7 @@ ssh_host_configs:
     Hostname: compute2.cloud.ctc
   'cloud-ctc-3 compute-ctc-3':
     Hostname: compute3.cloud.ctc
-  'cope.bldc.nwave.noaa.gov':
+  'cope.bldc.nwave.noaa.gov cope.bldc':
     Hostname: '140.182.54.14'
   'dns dns-bldc':
     Hostname: db2.bldc
