--- a/roles/i3/files/i3status.conf
+++ b/roles/i3/files/i3status.conf
@@ -11,8 +11,8 @@ general {
         interval = 5
 }
 
-order += "disk /"
 order += "ethernet _first_"
+order += "disk /"
 order += "load"
 order += "memory"
 order += "tztime local"
@@ -33,15 +33,15 @@ battery all {
 }
 
 disk "/" {
-        format = "disk free: %avail"
+        format = "disk: %avail free"
 }
 
 load {
-        format = "load %1min %5min %15min"
+        format = "load: %1min %5min %15min"
 }
 
 memory {
-        format = "mem used: %used / free: %available"
+        format = "mem: %used used / %available avail"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
