--- a/roles/i3/files/i3.conf
+++ b/roles/i3/files/i3.conf
@@ -21,22 +21,22 @@ bindsym $mod+Ctrl+q kill
 bindsym $mod+d exec dmenu_run
 
 # switch between workspaces
-bindsym $mod+Left workspace prev
-bindsym $mod+Up workspace prev
-bindsym $mod+Right workspace next
-bindsym $mod+Down workspace next
+bindsym $mod+h workspace prev
+bindsym $mod+j workspace prev
+bindsym $mod+k workspace next
+bindsym $mod+l workspace next
 
 # change focus
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
+bindsym $mod+Left focus left
+bindsym $mod+Down focus down
+bindsym $mod+Up focus up
+bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
+bindsym $mod+Shift+Left move left
+bindsym $mod+Shift+Down move down
+bindsym $mod+Shift+Up move up
+bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
 bindsym $mod+Control+h split h
